firefox.cfg: test

--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -1,4 +1,18 @@
 
+lockPref("gfx.canvas.accelerated.cache-items", 4096);
+lockPref("gfx.canvas.accelerated.cache-size", 512);
+lockPref("gfx.content.skia-font-cache-size", 20);
+lockPref("browser.cache.jsbc_compression_level", 3);
+lockPref("media.memory_cache_max_size", 65536);
+lockPref("media.cache_readahead_limit", 7200);
+lockPref("media.cache_resume_threshold", 3600);
+lockPref("image.mem.decode_bytes_at_a_time", 32768);
+lockPref("network.http.max-connections", 1800);
+lockPref("network.http.max-persistent-connections-per-server", 10);
+lockPref("network.http.max-urgent-start-excessive-connections-per-host", 5);
+lockPref("network.http.pacing.requests.enabled", false);
+lockPref("network.dnsCacheExpiration", 3600);
+lockPref("network.ssl_tokens_cache_capacity", 10240);
 lockPref("app.shield.optoutstudies.enabled", false);
 lockPref("dom.security.https_only_mode", true);
 lockPref("datareporting.healthreport.service.enabled", false);
@@ -13,12 +27,14 @@ lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.topSitesRows", 1);
+lockPref("layout.css.prefers-color-scheme.content-override", 0);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
 lockPref("browser.uidensity", 1);
 lockPref("full-screen-api.transition-duration.enter", "0 0");
 lockPref("full-screen-api.transition-duration.leave", "0 0");
+lockPref("full-screen-api.warning.delay", -1);
 lockPref("full-screen-api.warning.timeout", 0);
 lockPref("nglayout.enable_drag_images", false);
 lockPref("reader.parse-on-load.enabled", false);
