--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -27,6 +27,7 @@ lockPref("browser.ping-centre.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.topSitesRows", 1);
+lockPref("browser.newtabpage.activity-stream.default.sites", "https://www.youtube.com, https://music.youtube.com, https://mail.google.com/mail, https://gemini.google.com, https://chat.openai.com");
 lockPref("layout.css.prefers-color-scheme.content-override", 0);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
