firefox.cfg test 2

--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -41,6 +41,11 @@ lockPref("nglayout.enable_drag_images", false);
 lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
+lockPref("browser.download.open_pdf_attachments_inline", true);
+lockPref("browser.bookmarks.openInTabClosesMenu", false);
+lockPref("browser.menu.showViewImageInfo", true);
+lockPref("findbar.highlightAll", true);
+lockPref("layout.word_select.eat_space_to_next_word", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
 lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
