firefox.cfg: urlbar

--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -41,6 +41,9 @@ lockPref("nglayout.enable_drag_images", false);
 lockPref("reader.parse-on-load.enabled", false);
 lockPref("browser.tabs.firefox-view", false);
 lockPref("browser.tabs.tabmanager.enabled", false);
+lockPref("browser.urlbar.suggest.calculator", true);
+lockPref("browser.urlbar.unitConversion.enabled", true);
+lockPref("browser.urlbar.trending.featureGate", false);
 lockPref("browser.download.open_pdf_attachments_inline", true);
 lockPref("browser.bookmarks.openInTabClosesMenu", false);
 lockPref("browser.menu.showViewImageInfo", true);
