--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -28,7 +28,6 @@ lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.topSitesRows", 1);
 lockPref("browser.newtabpage.activity-stream.default.sites", "https://www.youtube.com, https://music.youtube.com, https://mail.google.com/mail, https://gemini.google.com, https://chat.openai.com");
-lockPref("layout.css.prefers-color-scheme.content-override", 0);
 lockPref("dom.push.enabled", false);
 lockPref("dom.webnotification.enabled", false);
 lockPref("browser.tabs.drawInTitlebar", true);
@@ -51,6 +50,12 @@ lockPref("findbar.highlightAll", true);
 lockPref("layout.word_select.eat_space_to_next_word", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
 lockPref("toolkit.legacyUserProfileCustomizations.stylesheets", true);
+lockPref("browser.compactmode.show", true);
+lockPref("browser.display.focus_ring_on_anything", true);
+lockPref("browser.display.focus_ring_style", 0);
+lockPref("browser.display.focus_ring_width", 0);
+lockPref("layout.css.prefers-color-scheme.content-override", 2);
+lockPref("browser.privateWindowSeparation.enabled", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false);
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false);
 lockPref("signon.management.page.fileImport.enabled", true);
