--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -65,3 +65,6 @@ lockPref("network.http.speculative-parallel-limit", 0);
 lockPref("network.strict_transport_security.preloaded_lists", 3);
 lockPref("extensions.getAddons.cache.enabled", false);
 lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
+lockPref("privacy.userContext.ui.enabled", true);
+lockPref("media.peerconnection.ice.proxy_only_if_behind_proxy", true);
+lockPref("media.peerconnection.ice.default_address_only", true);
