firefox.cfg: disk avoidanc

--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -68,3 +68,5 @@ lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
 lockPref("privacy.userContext.ui.enabled", true);
 lockPref("media.peerconnection.ice.proxy_only_if_behind_proxy", true);
 lockPref("media.peerconnection.ice.default_address_only", true);
+lockPref("browser.privatebrowsing.forceMediaMemoryCache", true);
+lockPref("browser.sessionstore.interval", 60000);
