firefox.cfg: ssl and tls

--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -70,3 +70,6 @@ lockPref("media.peerconnection.ice.proxy_only_if_behind_proxy", true);
 lockPref("media.peerconnection.ice.default_address_only", true);
 lockPref("browser.privatebrowsing.forceMediaMemoryCache", true);
 lockPref("browser.sessionstore.interval", 60000);
+lockPref("security.ssl.treat_unsafe_negotiation_as_broken", true);
+lockPref("browser.xul.error_pages.expert_bad_cert", true);
+lockPref("security.tls.enable_0rtt_data", false);
