--- a/Windows/Extra/firefox.cfg
+++ b/Windows/Extra/firefox.cfg
@@ -1,4 +1,4 @@
-/** PERFORMANCE SETTINGS ***/
+// PERFORMANCE SETTINGS
 lockPref("gfx.canvas.accelerated.cache-items", 4096); // CANVAS CACHE ITEMS
 lockPref("gfx.canvas.accelerated.cache-size", 512); // CANVAS CACHE SIZE
 lockPref("gfx.content.skia-font-cache-size", 20); // SKIA FONT CACHE SIZE
@@ -8,7 +8,7 @@ lockPref("media.cache_readahead_limit", 7200); // MEDIA CACHE READAHEAD LIMIT
 lockPref("media.cache_resume_threshold", 3600); // MEDIA CACHE RESUME THRESHOLD
 lockPref("image.mem.decode_bytes_at_a_time", 32768); // IMAGE DECODE BYTES AT A TIME
 
-/** NETWORK SETTINGS ***/
+// NETWORK SETTINGS
 lockPref("network.http.max-connections", 1800); // MAX HTTP CONNECTIONS
 lockPref("network.http.max-persistent-connections-per-server", 10); // MAX PERSISTENT CONNECTIONS PER SERVER
 lockPref("network.http.max-urgent-start-excessive-connections-per-host", 5); // MAX URGENT START EXCESSIVE CONNECTIONS PER HOST
@@ -16,7 +16,7 @@ lockPref("network.http.pacing.requests.enabled", false); // DISABLE HTTP PACING 
 lockPref("network.dnsCacheExpiration", 3600); // DNS CACHE EXPIRATION
 lockPref("network.ssl_tokens_cache_capacity", 10240); // SSL TOKENS CACHE CAPACITY
 
-/** PRIVACY & SECURITY SETTINGS ***/
+// PRIVACY & SECURITY SETTINGS
 lockPref("app.shield.optoutstudies.enabled", false); // DISABLE SHIELD STUDIES
 lockPref("dom.security.https_only_mode", true); // ENABLE HTTPS ONLY MODE
 lockPref("datareporting.healthreport.service.enabled", false); // DISABLE HEALTH REPORT SERVICE
@@ -33,7 +33,7 @@ lockPref("browser.newtabpage.activity-stream.telemetry", false); // DISABLE ACTI
 lockPref("dom.push.enabled", false); // DISABLE PUSH NOTIFICATIONS
 lockPref("dom.webnotification.enabled", false); // DISABLE WEB NOTIFICATIONS
 
-/** UI & DISPLAY SETTINGS ***/
+// UI & DISPLAY SETTINGS
 lockPref("browser.tabs.drawInTitlebar", true); // ENABLE DRAW IN TITLEBAR
 lockPref("browser.uidensity", 1); // SET UI DENSITY
 lockPref("full-screen-api.transition-duration.enter", "0 0"); // FULLSCREEN TRANSITION DURATION ENTER
@@ -63,7 +63,7 @@ lockPref("browser.privateWindowSeparation.enabled", false); // DISABLE PRIVATE W
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.addons", false); // DISABLE CFR ADDONS
 lockPref("browser.newtabpage.activity-stream.asrouter.userprefs.cfr.features", false); // DISABLE CFR FEATURES
 
-/** MISCELLANEOUS SETTINGS ***/
+// MISCELLANEOUS SETTINGS
 lockPref("signon.management.page.fileImport.enabled", true); // ENABLE FILE IMPORT FOR PASSWORD MANAGER
 lockPref("network.predictor.enabled", false); // DISABLE NETWORK PREDICTOR
 lockPref("network.prefetch-next", false); // DISABLE PREFETCH NEXT
